[MODFIN-419] - Display updated values on job details log screen